fixed up font jump in buttons

--- a/src/app/components/desktop/button_sets_desktop/buttons-desktop/buttons-desktop.component.css
+++ b/src/app/components/desktop/button_sets_desktop/buttons-desktop/buttons-desktop.component.css
@@ -9,7 +9,6 @@
     padding-left: 3%;
     border-width: 0;
     cursor: pointer;
-    font-family: rubik;
 }
 
 .menu_button:hover {
